--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,12 @@
 Package: mpoxsmcam.app
 Type: Package
-Title: What the Package Does (Short Line)
-Version: 1.0
+Title: App to explore parameter sensitivity and forecasts from the mpox SMCAM model 
+Version: 0.0.1
 Date: 2025-07-14
-Author: Who wrote it
-Maintainer: Who to complain to <yourfault@somewhere.net>
-Description: More about what it does (maybe more than one line).
-License: What license is it under?
+Author: Erik Volz
+Maintainer: Erik Volz <e.volz@imperial.ac.uk> 
+Description: App to explore parameter sensitivity and forecasts from the mpox SMCAM model 
+Depends: pomp, lubridate, ggplot2, glue, doParallel, iterators, foreach
+Imports: pomp
+License: All Rights Reserved 
+RoxygenNote: 7.3.1
