shiny app draft; fopl histograms; dbg

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,9 +11,20 @@ export(IUW)
 export(MODELS)
 export(d)
 export(d2)
+export(dlikelihoodtable)
+export(dmeas)
 export(dnl)
+export(ds)
+export(edf)
 export(fits)
 export(fopl)
+export(medf0)
+export(medf1)
 export(pfs.best)
+export(pnames)
 export(psumdf)
+export(rinit)
+export(rmeas)
+export(rproc)
+export(snames)
 export(vd)
