--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: mpoxsmcam.app
 Type: Package
 Title: App to explore parameter sensitivity and forecasts from the mpox SMCAM model 
-Version: 0.1.0
+Version: 0.1.4
 Date: 2025-07-18
 Author: Erik Volz
 Maintainer: Erik Volz <e.volz@imperial.ac.uk> 
 Description: App to explore parameter sensitivity and forecasts from the mpox SMCAM model 
-Depends: pomp, lubridate, ggplot2, glue, doParallel, iterators, foreach
+Depends: pomp, lubridate, ggplot2, glue, doParallel, iterators, foreach, mgcv
 Imports: pomp
 License: All Rights Reserved 
 RoxygenNote: 7.3.1
